libcontentaction (0.1.29~unreleased) unstable; urgency=low

  * Fixes: NB#191392
  * Fixes: NB#191945

 -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 17 Sep 2010 14:02:27 +0300

libcontentaction (0.1.28) unstable; urgency=low

  * Added 2 Action::launcherAction functions.

 -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 17 Sep 2010 13:17:13 +0300

libcontentaction (0.1.27) unstable; urgency=low

  * Fixes: NB#192179
  * Merging the highlighter tool hl1 into lca-tool (lca-tool --highlight)
  
 -- Marja Hassinen <marja.hassinen@nokia.com>  Thu, 16 Sep 2010 11:53:09 +0300

libcontentaction (0.1.26) unstable; urgency=low

  * Fixes: NB#191945

 -- Marja Hassinen <marja.hassinen@nokia.com>  Wed, 15 Sep 2010 10:14:26 +0300

libcontentaction (0.1.25) unstable; urgency=low

  * Fixes: NB#191791

 -- Marja Hassinen <marja.hassinen@nokia.com>  Tue, 14 Sep 2010 12:10:12 +0300

libcontentaction (0.1.24) unstable; urgency=low

  * Configuration update: regexps
  * Fixes: NB#191491
  * Fixes: NB#191290
  * Fixes: NB#179385

 -- Marja Hassinen <marja.hassinen@nokia.com>  Mon, 13 Sep 2010 13:04:21 +0300

libcontentaction (0.1.23) unstable; urgency=low

  * Fixes: NB#190808
  * lca doesn't get confused if defaults.list contains nonexistent applications

 -- Marja Hassinen <marja.hassinen@nokia.com>  Mon, 13 Sep 2010 09:36:06 +0300

libcontentaction (0.1.22) unstable; urgency=low

  * Fixing double %-escaping of special characters.
  * Defaults.list update

 -- Marja Hassinen <marja.hassinen@nokia.com>  Mon, 06 Sep 2010 10:12:26 +0300

libcontentaction (0.1.21) unstable; urgency=low

  * Configuration update: http-url regexp.

 -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 03 Sep 2010 12:19:00 +0300

libcontentaction (0.1.20) unstable; urgency=low

  * Configuration update.
  * Fixes: NB#189612

 -- Marja Hassinen <marja.hassinen@nokia.com>  Wed, 01 Sep 2010 12:43:48 +0300

libcontentaction (0.1.19) unstable; urgency=low
