@@ -2,6 +2,7 @@ libcontentaction (0.1.29~unreleased) unstable; urgency=low
 
   * Fixes: NB#191392
   * Fixes: NB#191945
+  * Configuration update: e-mail address regexps
 
  -- Marja Hassinen <marja.hassinen@nokia.com>  Fri, 17 Sep 2010 14:02:27 +0300
 
